<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/menu_notes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_notes"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings"/>
</menu>
