<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="@string/profile_title"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/Theme.NotesMaster.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="?attr/actionBarSize">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/profile_avatar"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_demo"
            android:textColor="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="demo@notemaster.com"
            android:textColor="@color/colorSecondary"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_bottom_nav"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
